<resources>
    <string name="app_name">ExerciseTabs</string>
    <string name="home_title">Home</string>
    <string name="search_hint_text">Search...</string>
    <string name="entertainment_title">Entertainment</string>
    <string name="entertainment_iv_desc">Entertainment Picture</string>
    <string name="lifestyle_title">Lifestyle</string>
    <string name="lifestyle_iv_desc">Lifestyle Picture</string>
    <string name="ent_kpop_desc">K-POP</string>
    <string name="ent_local_desc">LOCAL</string>
    <string name="ent_sports_desc">SPORTS</string>
    <string name="lf_travel_desc">TRAVEL</string>
    <string name="lf_fitness_desc">FITNESS</string>
    <string name="lf_cooking_desc">COOKING</string>
</resources>