<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/homeTitleTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_title"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"/>

        <EditText
            android:id="@+id/searchET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:drawableStart="@drawable/ic_search"
            android:hint="@string/search_hint_text"
            android:minHeight="48dp" />

        <!--START OF ENTERTAINMENT SECTION-->
        <TextView
            android:id="@+id/entertainmentTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/entertainment_title"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="30dp"/>

        <ImageView
            android:id="@+id/entertainmentIV"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/bp1"
            android:contentDescription="@string/entertainment_iv_desc"
            android:layout_marginTop="15dp"/>

        <View
            android:id="@+id/entertainmentSeparatorV"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            android:background="@color/gray" />

        <!--END OF ENTERTAINMENT SECTION-->

        <!--START OF LIFESTYLE SECTION-->
        <TextView
            android:id="@+id/lifestyleTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lifestyle_title"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="30dp"/>

        <ImageView
            android:id="@+id/lifestyleIV"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/lf1"
            android:contentDescription="@string/lifestyle_iv_desc"
            android:layout_marginTop="15dp"/>

        <View
            android:id="@+id/lifestyleSeparatorV"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            android:background="@color/gray" />

        <!--END OF LIFESTYLE SECTION-->

    </LinearLayout>

</ScrollView>