<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/entertainmentTitleTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/entertainment_title"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="15dp" />

        <!-- START OF K-POP SECTION -->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp">

            <ImageView
                android:id="@+id/entKPOPIV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/bp2"
                android:contentDescription="@string/ent_kpop_desc"
                android:layout_marginTop="4dp"/>

            <TextView
                android:id="@+id/entKPOPDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@color/black_50"
                android:padding="10dp"
                android:text="@string/ent_kpop_desc"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        </FrameLayout>

        <!-- END OF K-POP SECTION -->

        <!-- START OF LOCAL SECTION -->

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp">

            <ImageView
                android:id="@+id/entLOCALIV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/lc1"
                android:contentDescription="@string/ent_local_desc"
                android:layout_marginTop="4dp"/>

            <TextView
                android:id="@+id/entLocalDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@color/black_50"
                android:padding="10dp"
                android:text="@string/ent_local_desc"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        </FrameLayout>

        <!-- END OF LOCAL SECTION -->

        <!-- START OF SPORTS SECTION -->

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp">

            <ImageView
                android:id="@+id/entSportsIV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/sp1"
                android:contentDescription="@string/ent_sports_desc"
                android:layout_marginTop="4dp"/>

            <TextView
                android:id="@+id/entSportsDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@color/black_50"
                android:padding="10dp"
                android:text="@string/ent_sports_desc"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        </FrameLayout>

        <!-- END OF SPORTS SECTION -->




    </LinearLayout>


</ScrollView>